--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <section style="text-align: center;">
             <h2>ទំនាក់ទំនង</h2>
             <p>អ្នកអាចទាក់ទងមកខ្ញុំតាមរយៈប៊ូតុងខាងក្រោម៖</p>
-            <a href="https://www.messenger.com/Vannakk67" class="contact-btn">Messenger</a>
+            <a href="https://m.me/Vannakk67" class="contact-btn">Messenger</a>
             <a href="https://t.me/NakGenzz" class="contact-btn">Telegram</a>
         </section>
     </div>
