--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </div>
 
     <footer>
-        &copy; 2026 រក្សាសិទ្ធិដោយ <b>វ៉ា វណ្ណះ</b>
+        Develop website 2026 រក្សាសិទ្ធិដោយ <b>វ៉ា វណ្ណះ</b>
     </footer>
 
 </body>
