--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         header {
             /* បន្ថែមស្រទាប់ពណ៌សថ្លា (0.4) ពីលើរូបភាពដើម្បីឱ្យអក្សរខ្មៅមើលទៅច្បាស់ */
             background: linear-gradient(rgba(0, 0, 0, 0.39), rgba(0, 0, 0, 0.466)),
-                url('https://f.top4top.io/p_3691vrsq91.jpg');
+                url('https://top4top.io/del6b0ecdf3717df51a818ab7f3d1861d3d.html');
             background-size: cover;
             background-position: center;
             height: 300px;
