Update birth date in index.html

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <h2>ព័ត៌មានលម្អិត</h2>
             <ul class="info-list">
                 <li><b>ឈ្មោះពេញ:</b> <span>វ៉ា វណ្ណះ</span></li>
-                <li><b>កើតនៅថ្ងៃទី:</b> <span>ថ្ងៃទី26 ខែវិច្ឆិកា ឆ្នាំ 20XX</span></li>
+                <li><b>កើតនៅថ្ងៃទី:</b> <span>ថ្ងៃទី26 ខែវិច្ឆិកា ឆ្នាំ 2010</span></li>
                 <li><b>រៀនថ្នាក់ទី:</b> <span>10 A</span></li>
                 <li><b>ជាសិស្សនៅ:</b> <span>វិទ្យាល័យជ្រោយបន្ទាយ</span></li>
                 <li><b>ទីកន្លែងកំណើត:</b> <span>​​​​ភូមិខ្សាច់ទប់ ឃុំជ្រោយបន្ទាយ ស្រុកព្រែកប្រសព្វ ខេត្តក្រចេះ</span>
