--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         header {
             /* បន្ថែមស្រទាប់ពណ៌សថ្លា (0.4) ពីលើរូបភាពដើម្បីឱ្យអក្សរខ្មៅមើលទៅច្បាស់ */
             background: linear-gradient(rgba(0, 0, 0, 0.39), rgba(0, 0, 0, 0.466)),
-                url('https://b.top4top.io/p_3691o3exx1.jpg');
+                url('https://h.top4top.io/p_3693q9ex51.png');
             background-size: cover;
             background-position: center;
             height: 300px;
