--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             <p>អ្នកអាចទាក់ទងមកខ្ញុំតាមរយៈប៊ូតុងខាងក្រោម៖</p>
             <a href="https://m.me/Vannakk67" class="contact-btn">Messenger</a>
             <a href="https://t.me/NakGenzz" class="contact-btn">Telegram</a>
+            <a href="t.me/mycrisisnak" class="contact-brn">Channal Telegram</a>
         </section>
     </div>
 
