--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             <h2>ទំនាក់ទំនង</h2>
             <p>អ្នកអាចទាក់ទងមកខ្ញុំតាមរយៈប៊ូតុងខាងក្រោម៖</p>
             <a href="https://m.me/Vannakk67" class="contact-btn">Messenger</a>
+            <a href="https://www.facebook.com/Vannakk67" class="contact-btn">Facebook</a>
             <a href="https://t.me/NakGenzz" class="contact-btn">Telegram</a>
             <a href="https://t.me/mycrisisnak" class="contact-btn">Channal Telegram</a>
         </section>
