Update Telegram channel link text in index.html

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <a href="https://m.me/Vannakk67" class="contact-btn">Messenger</a>
             <a href="https://www.facebook.com/Vannakk67" class="contact-btn">Facebook</a>
             <a href="https://t.me/NakGenzz" class="contact-btn">Telegram</a>
-            <a href="https://t.me/mycrisisnak" class="contact-btn">Channal Telegram</a>
+            <a href="https://t.me/mycrisisnak" class="contact-btn">Channal TG</a>
         </section>
     </div>
 
